# LineScript-Programming-Language

./: .gitignore  CMakeLists.txt  LICENSE  README.md  launch.json  linescript.cmd  linescript.ps1  linescript.sh  lsc.cpp
docs/: API_REFERENCE.md  BENCHMARK.md  CHANGELOG.md  IDE_SETUP.md  LANGUAGE_GUIDE.md  OOP.md  PROJECT_CONTEXT.md  STDLIB.md  SYNTAX.md
editor-configs/: README.md
editor-configs/vim/: coc-settings.json
examples/: collections_input.lsc  fib.ls  fib.lsc  format_mode_input.lsc  game_window_demo.lsc  graphics_demo.lsc  http_server.lsc  if_elif.lsc  math_showcase.lsc  renderer_backend_targets.lsc  state_speed.lsc  ui_bitmap_text_demo.lsc  vscode_lsp_diagnostics_gauntlet.lsc
gauntlet/c/: compute.c  http.c
gauntlet/cpp/: concurrency.cpp
gauntlet/linescript/: compute.lsc  concurrency.lsc  http.lsc
gauntlet/zig/: compute.zig  concurrency.zig  http.zig
installer/: LineScriptSetup.cpp
libraries/game/: game_helpers.lsc
libraries/graphics2d/: graphics2d_helpers.lsc
libraries/physics/: physics_helpers.lsc
scripts/: package.ps1  package.sh
src/: lsc.cpp
tests/: run_tests.ps1
tests/cases/compile_fail/: array_bad_types.lsc  game_mouse_bad_types.lsc  game_mouse_down_bad_types.lsc  gfx_bad_types.lsc  operator_unary_override_bad_arity.lsc  owned_in_loop.lsc
tests/stress/: dense_nested.lsc  game_render_pipeline.lsc  graphics_raster_sum.lsc  stress_parallel_independent.lsc
tests/zig/: mix_sum.zig
vscode-extension/linescript-vscode/: README.md  language-configuration.json  linescript-vscode.vsix  package-lock.json  package.json
(+21 files in other folders)
