cmake_minimum_required(VERSION 3.16)
project(LineScript LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include(GNUInstallDirs)

add_executable(lsc src/lsc.cpp)
if(WIN32)
  add_executable(LineScriptSetup installer/LineScriptSetup.cpp)
  target_link_libraries(LineScriptSetup PRIVATE shell32 ole32 user32 gdi32)
endif()

if(MSVC)
  target_compile_options(lsc PRIVATE /O2 /GL /W4)
  target_link_options(lsc PRIVATE /LTCG)
else()
  target_compile_options(lsc PRIVATE -O3 -flto -march=native -fstrict-aliasing -Wall -Wextra -Wpedantic)
  target_link_options(lsc PRIVATE -flto)
endif()

install(TARGETS lsc RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
if(WIN32)
  install(TARGETS LineScriptSetup RUNTIME DESTINATION .)
endif()
install(FILES README.md linescript.ps1 linescript.cmd DESTINATION .)
install(DIRECTORY docs DESTINATION .)
install(DIRECTORY libraries DESTINATION .)
install(DIRECTORY examples DESTINATION .)
install(FILES tests/run_tests.ps1 tests/README.md DESTINATION tests)
install(DIRECTORY tests/cases DESTINATION tests)
install(FILES .vscode/tasks.json DESTINATION .vscode)
install(FILES .vscode/launch.json DESTINATION .vscode)

set(CPACK_PACKAGE_NAME "LineScript")
set(CPACK_PACKAGE_VENDOR "LineScript Project")
set(CPACK_PACKAGE_FILE_NAME "LineScript-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
set(CPACK_GENERATOR "ZIP")
include(CPack)
